--- a/ChickenBroth/ChickenBroth.vcxproj.filters
+++ b/ChickenBroth/ChickenBroth.vcxproj.filters
@@ -1,42 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="소스 파일">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="헤더 파일">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="리소스 파일">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="ChickenBroth">
+      <UniqueIdentifier>{9934332E-8597-C2D2-2E1D-FB881A5F8E55}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\ChickenBroth.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
+    <ClInclude Include="src\ChickenBroth.h" />
     <ClInclude Include="src\ChickenBroth\Application.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>ChickenBroth</Filter>
     </ClInclude>
     <ClInclude Include="src\ChickenBroth\Core.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>ChickenBroth</Filter>
     </ClInclude>
     <ClInclude Include="src\ChickenBroth\EntryPoint.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>ChickenBroth</Filter>
     </ClInclude>
     <ClInclude Include="src\ChickenBroth\Log.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>ChickenBroth</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ChickenBroth\Application.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>ChickenBroth</Filter>
     </ClCompile>
     <ClCompile Include="src\ChickenBroth\Log.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>ChickenBroth</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
