--- a/ChickenBroth/ChickenBroth.vcxproj.filters
+++ b/ChickenBroth/ChickenBroth.vcxproj.filters
@@ -34,6 +34,7 @@
     <ClInclude Include="src\ChickenBroth\Log.h">
       <Filter>ChickenBroth</Filter>
     </ClInclude>
+    <ClInclude Include="src\cbpch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ChickenBroth\Application.cpp">
@@ -42,5 +43,6 @@
     <ClCompile Include="src\ChickenBroth\Log.cpp">
       <Filter>ChickenBroth</Filter>
     </ClCompile>
+    <ClCompile Include="src\cbpch.cpp" />
   </ItemGroup>
 </Project>
