Postbuild command for ChickenBroth project modified

--- a/ChickenBroth/ChickenBroth.vcxproj
+++ b/ChickenBroth/ChickenBroth.vcxproj
@@ -94,7 +94,7 @@
       <ImportLibrary>..\bin\Debug-windows-x86_64\ChickenBroth\ChickenBroth.lib</ImportLibrary>
     </Link>
     <PostBuildEvent>
-      <Command>IF EXIST ..\bin\Debug-windows-x86_64\ChickenBroth\ChickenBroth.dll\ (xcopy /Q /E /Y /I ..\bin\Debug-windows-x86_64\ChickenBroth\ChickenBroth.dll ..\bin\Debug-windows-x86_64\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Debug-windows-x86_64\ChickenBroth\ChickenBroth.dll ..\bin\Debug-windows-x86_64\Sandbox &gt; nul)</Command>
+      <Command>IF EXIST ..\bin\Debug-windows-x86_64\ChickenBroth\ChickenBroth.dll\ (xcopy /Q /E /Y /I ..\bin\Debug-windows-x86_64\ChickenBroth\ChickenBroth.dll "..\bin\Debug-windows-x86_64\Sandbox\" &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Debug-windows-x86_64\ChickenBroth\ChickenBroth.dll "..\bin\Debug-windows-x86_64\Sandbox\" &gt; nul)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -121,7 +121,7 @@
       <ImportLibrary>..\bin\Release-windows-x86_64\ChickenBroth\ChickenBroth.lib</ImportLibrary>
     </Link>
     <PostBuildEvent>
-      <Command>IF EXIST ..\bin\Release-windows-x86_64\ChickenBroth\ChickenBroth.dll\ (xcopy /Q /E /Y /I ..\bin\Release-windows-x86_64\ChickenBroth\ChickenBroth.dll ..\bin\Release-windows-x86_64\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Release-windows-x86_64\ChickenBroth\ChickenBroth.dll ..\bin\Release-windows-x86_64\Sandbox &gt; nul)</Command>
+      <Command>IF EXIST ..\bin\Release-windows-x86_64\ChickenBroth\ChickenBroth.dll\ (xcopy /Q /E /Y /I ..\bin\Release-windows-x86_64\ChickenBroth\ChickenBroth.dll "..\bin\Release-windows-x86_64\Sandbox\" &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Release-windows-x86_64\ChickenBroth\ChickenBroth.dll "..\bin\Release-windows-x86_64\Sandbox\" &gt; nul)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Dist|x64'">
@@ -148,7 +148,7 @@
       <ImportLibrary>..\bin\Dist-windows-x86_64\ChickenBroth\ChickenBroth.lib</ImportLibrary>
     </Link>
     <PostBuildEvent>
-      <Command>IF EXIST ..\bin\Dist-windows-x86_64\ChickenBroth\ChickenBroth.dll\ (xcopy /Q /E /Y /I ..\bin\Dist-windows-x86_64\ChickenBroth\ChickenBroth.dll ..\bin\Dist-windows-x86_64\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Dist-windows-x86_64\ChickenBroth\ChickenBroth.dll ..\bin\Dist-windows-x86_64\Sandbox &gt; nul)</Command>
+      <Command>IF EXIST ..\bin\Dist-windows-x86_64\ChickenBroth\ChickenBroth.dll\ (xcopy /Q /E /Y /I ..\bin\Dist-windows-x86_64\ChickenBroth\ChickenBroth.dll "..\bin\Dist-windows-x86_64\Sandbox\" &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Dist-windows-x86_64\ChickenBroth\ChickenBroth.dll "..\bin\Dist-windows-x86_64\Sandbox\" &gt; nul)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -161,11 +161,13 @@
     <ClInclude Include="src\ChickenBroth\Events\KeyEvent.h" />
     <ClInclude Include="src\ChickenBroth\Events\MouseEvent.h" />
     <ClInclude Include="src\ChickenBroth\ImGui\ImGuiLayer.h" />
+    <ClInclude Include="src\ChickenBroth\Input.h" />
     <ClInclude Include="src\ChickenBroth\Layer.h" />
     <ClInclude Include="src\ChickenBroth\LayerStack.h" />
     <ClInclude Include="src\ChickenBroth\Log.h" />
     <ClInclude Include="src\ChickenBroth\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h" />
+    <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\cbpch.h" />
   </ItemGroup>
@@ -176,6 +178,7 @@
     <ClCompile Include="src\ChickenBroth\LayerStack.cpp" />
     <ClCompile Include="src\ChickenBroth\Log.cpp" />
     <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp" />
+    <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\cbpch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
