--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ChickenBroth/vendor/imgui"]
 	path = ChickenBroth/vendor/imgui
 	url = https://github.com/woghrk12/imgui
+[submodule "ChickenBroth/vendor/glm"]
+	path = ChickenBroth/vendor/glm
+	url = https://github.com/woghrk12/glm
