--- a/ChickenBroth/ChickenBroth.vcxproj.filters
+++ b/ChickenBroth/ChickenBroth.vcxproj.filters
@@ -1349,6 +1349,10 @@
     </ClInclude>
     <ClInclude Include="src\ChickenBroth\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\ChickenBroth\Renderer\Renderer.h" />
+    <ClInclude Include="src\ChickenBroth\Renderer\Buffer.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
+    <ClInclude Include="src\ChickenBroth\Renderer\Shader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ChickenBroth\Application.cpp">
@@ -1379,5 +1383,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\ChickenBroth\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\ChickenBroth\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
+    <ClCompile Include="src\ChickenBroth\Renderer\Shader.cpp" />
   </ItemGroup>
 </Project>
