Change the type from unsigned int to uint32_t

--- a/ChickenBroth/ChickenBroth.vcxproj.filters
+++ b/ChickenBroth/ChickenBroth.vcxproj.filters
@@ -13,8 +13,14 @@
     <Filter Include="src\ChickenBroth\ImGui">
       <UniqueIdentifier>{3A5C3808-2656-615A-0FC3-F76AFB5BC7C6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\ChickenBroth\Renderer">
+      <UniqueIdentifier>{B6900E30-2253-42BA-6B03-D146D7041B98}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Platform\OpenGL">
+      <UniqueIdentifier>{35A49437-A105-7245-2A73-B8F796D3A804}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\Platform\Windows">
       <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
@@ -87,8 +93,26 @@
     <ClInclude Include="src\ChickenBroth\MouseButtonCodes.h">
       <Filter>src\ChickenBroth</Filter>
     </ClInclude>
+    <ClInclude Include="src\ChickenBroth\Renderer\Buffer.h">
+      <Filter>src\ChickenBroth\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ChickenBroth\Renderer\GraphicsContext.h">
+      <Filter>src\ChickenBroth\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ChickenBroth\Renderer\Renderer.h">
+      <Filter>src\ChickenBroth\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ChickenBroth\Renderer\Shader.h">
+      <Filter>src\ChickenBroth\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\ChickenBroth\Window.h">
       <Filter>src\ChickenBroth</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h">
+      <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
       <Filter>src\Platform\Windows</Filter>
@@ -1347,12 +1371,6 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
-    <ClInclude Include="src\ChickenBroth\Renderer\GraphicsContext.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
-    <ClInclude Include="src\ChickenBroth\Renderer\Renderer.h" />
-    <ClInclude Include="src\ChickenBroth\Renderer\Buffer.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
-    <ClInclude Include="src\ChickenBroth\Renderer\Shader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ChickenBroth\Application.cpp">
@@ -1373,6 +1391,21 @@
     <ClCompile Include="src\ChickenBroth\Log.cpp">
       <Filter>src\ChickenBroth</Filter>
     </ClCompile>
+    <ClCompile Include="src\ChickenBroth\Renderer\Buffer.cpp">
+      <Filter>src\ChickenBroth\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ChickenBroth\Renderer\Renderer.cpp">
+      <Filter>src\ChickenBroth\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ChickenBroth\Renderer\Shader.cpp">
+      <Filter>src\ChickenBroth\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
       <Filter>src\Platform\Windows</Filter>
     </ClCompile>
@@ -1382,10 +1415,5 @@
     <ClCompile Include="src\cbpch.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
-    <ClCompile Include="src\ChickenBroth\Renderer\Renderer.cpp" />
-    <ClCompile Include="src\ChickenBroth\Renderer\Buffer.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
-    <ClCompile Include="src\ChickenBroth\Renderer\Shader.cpp" />
   </ItemGroup>
 </Project>
