--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=651,18
-Size=550,680
+Pos=666,65
+Size=480,555
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Example: Log]
 Pos=60,60
@@ -14,9 +15,10 @@ Size=500,400
 Collapsed=0
 
 [Window][Test]
-Pos=60,60
-Size=100,48
+Pos=81,92
+Size=336,413
 Collapsed=0
 
 [Docking][Data]
+DockNode  ID=0x00000001 Pos=752,174 Size=480,555
 
