Added vertex array support

--- a/ChickenBroth/ChickenBroth.vcxproj.filters
+++ b/ChickenBroth/ChickenBroth.vcxproj.filters
@@ -1371,6 +1371,8 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
+    <ClInclude Include="src\ChickenBroth\Renderer\VertexArray.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ChickenBroth\Application.cpp">
@@ -1415,5 +1417,7 @@
     <ClCompile Include="src\cbpch.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\ChickenBroth\Renderer\VertexArray.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
   </ItemGroup>
 </Project>
