--- a/ChickenBroth/ChickenBroth.vcxproj
+++ b/ChickenBroth/ChickenBroth.vcxproj
@@ -161,11 +161,14 @@
     <ClInclude Include="src\ChickenBroth\Renderer\Buffer.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\Renderer.h" />
+    <ClInclude Include="src\ChickenBroth\Renderer\RendererAPI.h" />
+    <ClInclude Include="src\ChickenBroth\Renderer\RenderCommand.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\Shader.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\VertexArray.h" />
     <ClInclude Include="src\ChickenBroth\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
@@ -596,10 +599,13 @@
     <ClCompile Include="src\ChickenBroth\Log.cpp" />
     <ClCompile Include="src\ChickenBroth\Renderer\Buffer.cpp" />
     <ClCompile Include="src\ChickenBroth\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\ChickenBroth\Renderer\RendererAPI.cpp" />
+    <ClCompile Include="src\ChickenBroth\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\ChickenBroth\Renderer\Shader.cpp" />
     <ClCompile Include="src\ChickenBroth\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
