--- a/ChickenBroth/ChickenBroth.vcxproj.filters
+++ b/ChickenBroth/ChickenBroth.vcxproj.filters
@@ -1373,6 +1373,9 @@
     </ClInclude>
     <ClInclude Include="src\ChickenBroth\Renderer\VertexArray.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\ChickenBroth\Renderer\RendererAPI.h" />
+    <ClInclude Include="src\ChickenBroth\Renderer\RenderCommand.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ChickenBroth\Application.cpp">
@@ -1419,5 +1422,8 @@
     </ClCompile>
     <ClCompile Include="src\ChickenBroth\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
+    <ClCompile Include="src\ChickenBroth\Renderer\RendererAPI.cpp" />
+    <ClCompile Include="src\ChickenBroth\Renderer\RenderCommand.cpp" />
   </ItemGroup>
 </Project>
