Added the orthographic camera

--- a/ChickenBroth/ChickenBroth.vcxproj
+++ b/ChickenBroth/ChickenBroth.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="src\ChickenBroth\MouseButtonCodes.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\Buffer.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\ChickenBroth\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\Renderer.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\RendererAPI.h" />
     <ClInclude Include="src\ChickenBroth\Renderer\RenderCommand.h" />
@@ -598,6 +599,7 @@
     <ClCompile Include="src\ChickenBroth\LayerStack.cpp" />
     <ClCompile Include="src\ChickenBroth\Log.cpp" />
     <ClCompile Include="src\ChickenBroth\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\ChickenBroth\Renderer\OrthographicCamera.cpp" />
     <ClCompile Include="src\ChickenBroth\Renderer\Renderer.cpp" />
     <ClCompile Include="src\ChickenBroth\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\ChickenBroth\Renderer\RenderCommand.cpp" />
